# rgbd_proc

./: .gitignore  CMakeLists.txt  README.md  package.xml  requirements.txt
config/: dataset.yaml  depth_filter.yaml
config/rviz/: depth_estimation.rviz  depth_refinement.rviz  helhest.rviz
docs/: defom_stereo.md  psmnet.md  ros1_ros2_bags.md  todos.md
launch/: depth_estimation.launch.xml  depth_from_luxonis_stereo.launch.py  depth_refinement.launch.xml  disparity_visualization.launch.py  helhest_depth_estimation.launch.xml  helhest_depth_refinement.launch.xml  helhest_play.launch.py  helhest_play_depth.launch.py  save_data.launch.xml
nodes/: depth_estimation.py  save_data.py
scripts/: depth_correction.py  depth_to_cloud.py  depth_to_disparity.py  disp_correction.py  disparity_to_cloud.py  disparity_to_depth.py  eval_disp_correction.py  eval_disp_refinement.py  extract_images_from_bag.py  extract_stereo_images_from_bag.py  train_disp_correction.py  train_disp_refinement.py
scripts/defom_stereo/: generate_disparity_labels.py
src/: cloudproc.py  depth_filter.py  depth_refinement.py  imgproc.py  io.py  save_data.py  transformations.py  utils.py  vis.py
src/disp_refine/: dataset.py  linknet.py  utils.py  vis.py
