<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rgbd_proc</name>
  <version>0.0.1</version>
  <description>Data processing</description>
  <maintainer email="agishrus@fel.cvut.cz">Ruslan Agishev</maintainer>
  <license>BSD 3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>depth_img_proc</exec_depend>
  <exec_depend>stereo_image_proc</exec_depend>
  <exec_depend>rviz_imu_plugin</exec_depend>
  <exec_depend>tf2_ros_py</exec_depend>
  <exec_depend>rtabmap_ros</exec_depend>
  <exec_depend>rtabmap_odom</exec_depend>
  <exec_depend>rtabmap_slam</exec_depend>
  <exec_depend>rtabmap_vis</exec_depend>
  <exec_depend>depthai_ros_driver</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
